styled active buttons for dark theme, fixed sidebar spacing, updated stake pohm frax, improved top bar spacind for mobile

--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -45,7 +45,7 @@
   }
 }
 .dapp-menu-links {
-  min-height: 420px;
+  min-height: 40vh;
   display: flex;
   align-items: center;
 }
