--- a/src/style.scss
+++ b/src/style.scss
@@ -38,7 +38,7 @@ body {
 .ohm-card {
   .card-header {
     width: 100%;
-    min-height: 3rem;
+    min-height: 2rem;
     h5 {
       font-weight: 600 !important;
     }
